--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230909110154">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230915223849">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,53 +19,69 @@
 			<section class="page__main-block main-block">
 				<div class="main-block__container">
 					<div class="main-block__body">
-						<div class="main-block__label">Get to Know Us</div>
-						<h1 class="main-block__title">Our Team</h1>
+						<div class="main-block__label">
+							<p>Get to Know Us</p>
+						</div>
+						<h2 class="main-block__title">Our Team</h2>
 						<div class="main-block__text">
-							<p>Providing clients with ultimate bespoke representation, customized marketing strategy, and white-glove service. Excelling in exceeding expectations for buyers, sellers, investors, and beyond.</p>
+							<p>Providing clients with ultimate bespoke representation, customized marketing strategy, and
+								white-glove service. Excelling in exceeding expectations for buyers, sellers, investors, and
+								beyond.</p>
 						</div>
 						<div class="main-block__items">
 							<div class="main-block__item item-main-block">
-								<div class="item-main-block__image-ibg"><picture><source srcset="img/team/01.webp" type="image/webp"><img src="img/team/01.jpg" alt="Team"></picture></div>
-								<div class="item-main-block__body">
-									<div class="item-main-block__name">Andrey <br><span>Markovicz</span></div>
-									<a href="" class="item-main-block__button">Lead real estate agent</a>
-								</div>
+								<a href="#" class="item-main-block__content">
+									<div class="item-main-block__image-ibg"><picture><source srcset="img/team/01.webp" type="image/webp"><img src="img/team/01.jpg" alt="Team"></picture></div>
+									<div class="item-main-block__body">
+										<div class="item-main-block__name">Andrey <br><span>Markovicz</span></div>
+										<a href="#" class="item-main-block__button">Lead real estate agent</a>
+									</div>
+								</a>
 							</div>
 							<div class="main-block__item item-main-block">
-								<div class="item-main-block__image-ibg"><picture><source srcset="img/team/02.webp" type="image/webp"><img src="img/team/02.jpg" alt="Team"></picture></div>
-								<div class="item-main-block__body">
-									<div class="item-main-block__name">Andrey <br><span>Driver</span></div>
-									<a href="" class="item-main-block__button">Lead real estate agent</a>
-								</div>
+								<a href="#" class="item-main-block__content">
+									<div class="item-main-block__image-ibg"><picture><source srcset="img/team/02.webp" type="image/webp"><img src="img/team/02.jpg" alt="Team"></picture></div>
+									<div class="item-main-block__body">
+										<div class="item-main-block__name">Andrey <br><span>Driver</span></div>
+										<a href="#" class="item-main-block__button">Lead real estate agent</a>
+									</div>
+								</a>
 							</div>
 							<div class="main-block__item item-main-block">
-								<div class="item-main-block__image-ibg"><picture><source srcset="img/team/03.webp" type="image/webp"><img src="img/team/03.jpg" alt="Team"></picture></div>
-								<div class="item-main-block__body">
-									<div class="item-main-block__name">Lily <br><span>Pond</span></div>
-									<a href="" class="item-main-block__button">Lead real estate agent</a>
-								</div>
+								<a href="#" class="item-main-block__content">
+									<div class="item-main-block__image-ibg"><picture><source srcset="img/team/03.webp" type="image/webp"><img src="img/team/03.jpg" alt="Team"></picture></div>
+									<div class="item-main-block__body">
+										<div class="item-main-block__name">Lily <br><span>Pond</span></div>
+										<a href="#" class="item-main-block__button">Lead real estate agent</a>
+									</div>
+								</a>
 							</div>
 							<div class="main-block__item item-main-block">
-								<div class="item-main-block__image-ibg"><picture><source srcset="img/team/04.webp" type="image/webp"><img src="img/team/04.jpg" alt="Team"></picture></div>
-								<div class="item-main-block__body">
-									<div class="item-main-block__name">Andrey <br><span>Markovicz</span></div>
-									<a href="" class="item-main-block__button">Lead real estate agent</a>
-								</div>
+								<a href="#" class="item-main-block__content">
+									<div class="item-main-block__image-ibg"><picture><source srcset="img/team/04.webp" type="image/webp"><img src="img/team/04.jpg" alt="Team"></picture></div>
+									<div class="item-main-block__body">
+										<div class="item-main-block__name">Andrey <br><span>Markovicz</span></div>
+										<a href="#" class="item-main-block__button">Lead real estate agent</a>
+									</div>
+								</a>
 							</div>
 							<div class="main-block__item item-main-block">
-								<div class="item-main-block__image-ibg"><picture><source srcset="img/team/05.webp" type="image/webp"><img src="img/team/05.jpg" alt="Team"></picture></div>
-								<div class="item-main-block__body">
-									<div class="item-main-block__name">Andrey <br><span>Okazaki</span></div>
-									<a href="" class="item-main-block__button">Lead real estate agent</a>
-								</div>
+								<a href="#" class="item-main-block__content">
+									<div class="item-main-block__image-ibg"><picture><source srcset="img/team/05.webp" type="image/webp"><img src="img/team/05.jpg" alt="Team"></picture></div>
+									<div class="item-main-block__body">
+										<div class="item-main-block__name">Andrey <br><span>Okazaki</span></div>
+										<a href="#" class="item-main-block__button">Lead real estate agent</a>
+									</div>
+								</a>
 							</div>
 							<div class="main-block__item item-main-block">
-								<div class="item-main-block__image-ibg"><picture><source srcset="img/team/06.webp" type="image/webp"><img src="img/team/06.jpg" alt="Team"></picture></div>
-								<div class="item-main-block__body">
-									<div class="item-main-block__name">Lily <br><span>Wei Xin</span></div>
-									<a href="" class="item-main-block__button">Lead real estate agent</a>
-								</div>
+								<a href="#" class="item-main-block__content">
+									<div class="item-main-block__image-ibg"><picture><source srcset="img/team/06.webp" type="image/webp"><img src="img/team/06.jpg" alt="Team"></picture></div>
+									<div class="item-main-block__body">
+										<div class="item-main-block__name">Lily <br><span>Wei Xin</span></div>
+										<a href="#" class="item-main-block__button">Lead real estate agent</a>
+									</div>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -77,7 +93,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20230909110154"></script>
+	<script src="js/app.min.js?_v=20230915223849"></script>
 </body>
 
 </html>
